--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -61,7 +61,8 @@
     },
     "maritimtArbeid" : [
       {
-        "installasjonsLandkode" : "GB",
+        "innretningLandkode" : null,
+        "innretningstype": null,
         "flaggLandkode" : "GB",
         "enhetNavn" : "Snorre Dunfjæder",
         "fartsomradeKode" : "INNENRIKS",
@@ -77,21 +78,23 @@
         "typeFlyvninger": "NASJONAL"
       }
     ],
-    "arbeidUtland" : [
-      {
-        "foretakNavn" : "BMW AG",
-        "foretakOrgnr": "123456789",
-        "adresse" : {
-          "landkode" : "DE",
-          "region" : "Brandenburger",
-          "husnummer" : "123",
-          "postnummer" : "1234",
-          "poststed" : "Poststedet",
-          "gatenavn" : "Adresseveien 123"
+    "arbeidPaaLand": {
+      "fysiskeArbeidssteder": [
+        {
+          "adresse": {
+            "gatenavn": "Adresseveien 123",
+            "husnummer": "123",
+            "region": "Brandenburger",
+            "postnummer": "1234",
+            "poststed": "Poststedet",
+            "landkode": "DE",
+          },
+          "virksomhetNavn": "EQUINOR",
         },
-        "arbeidUtlandHjemmekontor" : false
-      }
-    ],
+      ],
+      "erHjemmekontor": false,
+      "erFastArbeidssted": null
+    },
     "selvstendigArbeid" : {
       "selvstendigForetak" : [
         {
