Bare en av flaggLandkode og territorialfarvann skal være satt av gangen

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -97,7 +97,7 @@
         "fartsomradeKode": "INNENRIKS",
         "flaggLandkode": "GB",
         "innretningLandkode": null,
-        "territorialfarvann": "GB",
+        "territorialfarvann": null,
         "innretningstype": null
       }
     ],
