--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
@@ -127,7 +127,7 @@
         "fartsomradeKode": "INNENRIKS",
         "flaggLandkode": "GB",
         "innretningLandkode": null,
-        "territorialfarvann": "GB",
+        "territorialfarvann": null,
         "innretningstype": null
       }
     ],
