--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -115,7 +115,7 @@
         "fartsomradeKode": "INNENRIKS",
         "flaggLandkode": "GB",
         "innretningLandkode": null,
-        "territorialfarvann": "GB",
+        "territorialfarvann": null,
         "innretningstype": null,
       }
     ],
