--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -66,7 +66,7 @@
         "flaggLandkode" : "GB",
         "enhetNavn" : "Snorre Dunfjæder",
         "fartsomradeKode" : "INNENRIKS",
-        "territorialfarvann": "GB",
+        "territorialfarvann": null,
       }
     ],
     "luftfartBaser": [
