Gjør alle felt required, men nullable

--- a/mock_data/avklartefakta-oppsummering/avklartefakta-oppsummering-bid-2.json5
+++ b/mock_data/avklartefakta-oppsummering/avklartefakta-oppsummering-bid-2.json5
@@ -6,6 +6,8 @@
     {
       "uuid": "2519c5fc-5e27-425c-a1d4-eb7a5fc0021d",
       "omfattet": true,
+      "begrunnelseKode": null,
+      "begrunnelseFritekst": null
     },
     {
       "uuid": "416c97d5-fd1d-4eff-952c-edc42aeb40a0",
