Legg til vedlegg for bestilling av anmodningsperioder og henlegg-videresend

--- a/mock_data/fagsaker-henleggvideresend/post/fagsaker-henleggvideresend-post.json5
+++ b/mock_data/fagsaker-henleggvideresend/post/fagsaker-henleggvideresend-post.json5
@@ -1,4 +1,10 @@
 {
   "mottakerinstitusjon": "NO:NAVT002",
-  "fritekst": "tittei på deg"
+  "fritekst": "tittei på deg",
+  "vedlegg": [
+    {
+      "journalpostID": "1234",
+      "dokumentID": "4321"
+    },
+  ],
 }
