nummer istedenfor id, blir mappet om i melosys-api

--- a/mock_data/representant-liste/representant-liste.json5
+++ b/mock_data/representant-liste/representant-liste.json5
@@ -1,14 +1,14 @@
 [
   {
-    "id":"99997",
+    "nummer":"99997",
     "navn":"ANDEBYPOSTEN"
   },
   {
-    "id":"99998",
+    "nummer":"99998",
     "navn":"UNIVERSITETET I ANDEBY"
   },
   {
-    "id":"99999",
+    "nummer":"99999",
     "navn":"99DUMMYNAVN"
   }
 ]
