--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -100,6 +100,18 @@
       "inntektErInnrapporteringspliktig": true,
       "inntektTrygdeavgiftBlirTrukket": true
     },
+    "loennOgGodtgjoerelse": {
+      "norskArbgUtbetalerLoenn": false,
+      "erArbeidstakerAnsattHelePerioden": true,
+      "utlArbgUtbetalerLoenn": true,
+      "bruttoLoennPerMnd": 7000.12,
+      "bruttoLoennUtlandPerMnd": 14000,
+      "mottarNaturalytelser": true,
+      "samletVerdiNaturalytelser": null,
+      "erArbeidsgiveravgiftHelePerioden": true,
+      "erTrukketTrygdeavgift": false,
+      "utlArbTilhoererSammeKonsern": null
+    },
     "arbeidsgiversBekreftelse": {
       "arbeidsgiverBekrefterUtsendelse": true,
       "arbeidstakerAnsattUnderUtsendelsen": true,
