--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-4.json5
@@ -146,5 +146,5 @@
       "tom": "2019-01-02"
     }
   },
-  "type": "SØKNAD_A1_YRKESAKTIVE_EØS",
+  "type": "SØKNAD_A1_UTSENDTE_ARBEIDSTAKERE_EØS",
 }
