--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -61,6 +61,18 @@
       "andelRekruttertINorge": null,
       "ekstraArbeidsgivere": []
     },
+    "loennOgGodtgjoerelse": {
+      "norskArbgUtbetalerLoenn": null,
+      "erArbeidstakerAnsattHelePerioden": null,
+      "utlArbgUtbetalerLoenn": null,
+      "bruttoLoennPerMnd": null,
+      "bruttoLoennUtlandPerMnd": null,
+      "mottarNaturalytelser": null,
+      "samletVerdiNaturalytelser": null,
+      "erArbeidsgiveravgiftHelePerioden": null,
+      "erTrukketTrygdeavgift": null,
+      "utlArbTilhoererSammeKonsern": null
+    },
     "arbeidsinntekt": {
       "inntektNorskIPerioden": null,
       "inntektUtenlandskIPerioden": null,
