--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-9.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-9.json5
@@ -59,6 +59,18 @@
       "andelRekruttertINorge": null,
       "ekstraArbeidsgivere": []
     },
+    "loennOgGodtgjoerelse": {
+      "norskArbgUtbetalerLoenn": false,
+      "erArbeidstakerAnsattHelePerioden": true,
+      "utlArbgUtbetalerLoenn": true,
+      "bruttoLoennPerMnd": 7000.12,
+      "bruttoLoennUtlandPerMnd": 14000,
+      "mottarNaturalytelser": true,
+      "samletVerdiNaturalytelser": null,
+      "erArbeidsgiveravgiftHelePerioden": true,
+      "erTrukketTrygdeavgift": false,
+      "utlArbTilhoererSammeKonsern": null
+    },
     "arbeidsinntekt": {
       "inntektNorskIPerioden": 20000,
       "inntektUtenlandskIPerioden": 32334,
