--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -50,6 +50,18 @@
       "inntektErInnrapporteringspliktig" : true,
       "inntektNorskIPerioden" : 5500
     },
+    "loennOgGodtgjoerelse": {
+      "norskArbgUtbetalerLoenn": null,
+      "erArbeidstakerAnsattHelePerioden": null,
+      "utlArbgUtbetalerLoenn": null,
+      "bruttoLoennPerMnd": null,
+      "bruttoLoennUtlandPerMnd": null,
+      "mottarNaturalytelser": null,
+      "samletVerdiNaturalytelser": null,
+      "erArbeidsgiveravgiftHelePerioden": null,
+      "erTrukketTrygdeavgift": null,
+      "utlArbTilhoererSammeKonsern": null
+    },
     "arbeidsgiversBekreftelse" : {
       "arbeidsgiverBetalerArbeidsgiveravgift" : true,
       "arbeidstakerAnsattUnderUtsendelsen" : true,
