Kan minimere hva vi eksponerer

--- a/mock_data/representant-representant/representant-rid-99998.json5
+++ b/mock_data/representant-representant/representant-rid-99998.json5
@@ -6,8 +6,5 @@
     "POSTBOKS 999"
   ],
   "postnummer":"8888",
-  "telefon":null,
-  "orgnr":"874799262",
-  "endretAv":"KNA4530",
-  "endretDato":"2021-02-11"
+  "orgnr":"874799262"
 }
