--- a/mock_data/representant-representant/representant-rid-99999.json5
+++ b/mock_data/representant-representant/representant-rid-99999.json5
@@ -8,8 +8,5 @@
     "DUMMYADR3"
   ],
   "postnummer":"3601",
-  "telefon":null,
-  "orgnr":null,
-  "endretAv":"RTV",
-  "endretDato":"1997-03-14"
+  "orgnr":null
 }
