--- a/mock_data/representant-representant/representant-rid-99997.json5
+++ b/mock_data/representant-representant/representant-rid-99997.json5
@@ -7,8 +7,5 @@
     "POSTBOKS 9999"
   ],
   "postnummer":"9999",
-  "telefon":null,
-  "orgnr":"974300354",
-  "endretAv":"KVA4530",
-  "endretDato":"2021-02-11"
+  "orgnr":"974300354"
 }
