Endringer for å få schema til å kjøre

--- a/mock_data/brev-tilgjengelige-maler/brev-tilgjengelige_maler.json5
+++ b/mock_data/brev-tilgjengelige-maler/brev-tilgjengelige_maler.json5
@@ -25,6 +25,7 @@
         "beskrivelse": "Fritekst til innledning",
         "feltType": "FRITEKST",
         "hjelpetekst": "",
+        "paakrevd": false,
         "valg": null
       },
       {
