Lønn og godtgjørelser skal være nullable

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-2.json5
@@ -100,18 +100,7 @@
       "andelRekruttertINorge": 80.0,
       "ekstraArbeidsgivere": []
     },
-    "loennOgGodtgjoerelse": {
-      "norskArbgUtbetalerLoenn": null,
-      "erArbeidstakerAnsattHelePerioden": null,
-      "utlArbgUtbetalerLoenn": null,
-      "bruttoLoennPerMnd": null,
-      "bruttoLoennUtlandPerMnd": null,
-      "mottarNaturalytelser": null,
-      "samletVerdiNaturalytelser": null,
-      "erArbeidsgiveravgiftHelePerioden": null,
-      "erTrukketTrygdeavgift": null,
-      "utlArbTilhoererSammeKonsern": null
-    },
+    "loennOgGodtgjoerelse": null,
     "arbeidsgiversBekreftelse": {
       "arbeidsgiverBekrefterUtsendelse": true,
       "arbeidstakerAnsattUnderUtsendelsen": true,
