oppdater mock data med utenlandsoppdraget

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
@@ -89,6 +89,14 @@
     "periode": {
       "fom": "2019-04-04",
       "tom": "2020-05-17"
+    },
+    "utenlandsoppdraget": {
+      "erUtsendelseForOppdragIUtlandet": null,
+      "erAnsattForOppdragIUtlandet": null,
+      "erFortsattAnsattEtterOppdraget": null,
+      "erDrattPaaEgetInitiativ": null,
+      "erErstatningTidligereUtsendte": null,
+      "samletUtsendingsperiode": { "fom": "2019-02-01", "tom": "2020-02-01" }
     }
   },
   "type": "SØKNAD_A1_YRKESAKTIVE_EØS",
