La til svarfrist i behandling for å kunne vises i oversiktboks frontend

--- a/mock_data/behandlinger-behandling/behandling-bid-3.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-3.json5
@@ -988,6 +988,7 @@
       "term": "Opprettet"
     },
     "registrertDato": "2017-10-19T14:35:54.000Z",
+    "svarFrist": "2020-08-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2017-10-19T14:35:54.000Z",
     "endretAvNavn": "HATT GLITRENDE"
