--- a/mock_data/behandlinger-behandling/behandling-bid-4.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-4.json5
@@ -816,6 +816,7 @@
       "term": "Opprettet"
     },
     "registrertDato": "2018-08-27T07:16:03.273Z",
+    "svarFrist": "2020-08-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-08-27T07:16:03.273Z",
     "endretAvNavn": "HATT GLITRENDE",
