--- a/mock_data/behandlinger-behandling/behandling-bid-7.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-7.json5
@@ -678,6 +678,7 @@
       "term": "Opprettet"
     },
     "registrertDato": "2018-03-12T16:23:42.122Z",
+    "svarFrist": "2020-08-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-03-15T16:31:35.845Z",
     "endretAvNavn": "HATT GLITRENDE"
