--- a/mock_data/behandlinger-behandling/behandling-bid-8.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-8.json5
@@ -369,6 +369,7 @@
       "term": "Søknad"
     },
     "registrertDato": "2018-10-02T07:04:35.403Z",
+    "svarFrist": "2020-08-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-10-02T07:04:35.403Z",
     "endretAvNavn": "HATT GLITRENDE"
