Byttet type til nullable-dato-tid

--- a/mock_data/behandlinger-behandling/behandling-bid-10.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-10.json5
@@ -373,7 +373,7 @@
     "endretDato": "2019-04-23T10:02:52.031Z",
     "endretAvNavn": "HATT GLITRENDE",
     "registrertDato": "2019-04-23T09:58:23.899Z",
-    "svarFrist": "2020-08-27",
+    "svarFrist": "2020-08-27T07:16:00.000Z",
     "sisteOpplysningerHentetDato": "2019-04-23T09:58:39.751Z"
   }
 }
