--- a/mock_data/behandlinger-behandling/behandling-bid-6.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-6.json5
@@ -804,7 +804,7 @@
       "term": "Opprettet"
     },
     "registrertDato": "2018-03-12T14:32:37.448Z",
-    "svarFrist": "2020-08-27",
+    "svarFrist": "2020-08-27T07:16:00.000Z",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-03-15T16:31:35.845Z",
     "endretAvNavn": "HATT GLITRENDE"
