--- a/mock_data/dokumenter-v2-utkast/post/mangelbrev_bruker-post.json5
+++ b/mock_data/dokumenter-v2-utkast/post/mangelbrev_bruker-post.json5
@@ -1,4 +1,5 @@
 {
+  "produserbardokument": "MANGELBREV_BRUKER",
   "mottaker": "BRUKER",
   "orgNr": null,
   "innledningFritekst": "Fritekst til bruk i innledningen til brevet.",
