--- a/mock_data/dokumenter-v2-utkast/post/melding_forventet_saksbehandlingstid_soknad-post.json5
+++ b/mock_data/dokumenter-v2-utkast/post/melding_forventet_saksbehandlingstid_soknad-post.json5
@@ -1,4 +1,5 @@
 {
+  "produserbardokument": "MELDING_FORVENTET_SAKSBEHANDLINGSTID_SOKNAD",
   "mottaker": "BRUKER",
   "orgNr": null,
   "innledningFritekst": null,
