Legg til felt erOffentligVirksomhet

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-14.json5
@@ -89,7 +89,8 @@
       "ekstraArbeidsgivere": [
         "123123123",
         "943049467"
-      ]
+      ],
+      "erOffentligVirksomhet": false,
     },
     "maritimtArbeid": [
       {
