--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-6.json5
@@ -57,7 +57,8 @@
       "andelOppdragINorge": null,
       "andelKontrakterINorge": null,
       "andelRekruttertINorge": null,
-      "ekstraArbeidsgivere": []
+      "ekstraArbeidsgivere": [],
+      "erOffentligVirksomhet": false,
     },
     "loennOgGodtgjoerelse": null,
     "arbeidsgiversBekreftelse": {
