--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-18.json5
@@ -105,7 +105,8 @@
       "andelOppdragINorge": 50.5,
       "andelKontrakterINorge": 30.5,
       "andelRekruttertINorge": 80.0,
-      "ekstraArbeidsgivere": []
+      "ekstraArbeidsgivere": [],
+      "erOffentligVirksomhet": false,
     },
     "maritimtArbeid": [],
     "luftfartBaser": [],
