--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -59,7 +59,8 @@
       "andelOppdragINorge": null,
       "andelKontrakterINorge": null,
       "andelRekruttertINorge": null,
-      "ekstraArbeidsgivere": []
+      "ekstraArbeidsgivere": [],
+      "erOffentligVirksomhet": false,
     },
     "loennOgGodtgjoerelse": null,
     "arbeidsgiversBekreftelse": {
