--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -36,7 +36,8 @@
       "andelOppdragINorge": 50.5,
       "andelKontrakterINorge": 30.5,
       "andelRekruttertINorge": 80.0,
-      "ekstraArbeidsgivere": []
+      "ekstraArbeidsgivere": [],
+      "erOffentligVirksomhet": false,
     },
     "loennOgGodtgjoerelse": {
       "norskArbgUtbetalerLoenn": null,
