--- a/mock_data/dokumenter-v2-opprett/post/mangelbrev_bruker-post.json5
+++ b/mock_data/dokumenter-v2-opprett/post/mangelbrev_bruker-post.json5
@@ -4,6 +4,6 @@
   "orgNr": null,
   "innledningFritekst": "Fritekst til bruk i innledningen til brevet.",
   "manglerFritekst": "Fritekst som forklarer grunnen til at mangelbrevet blir sendt.",
-  "kontaktperson": null,
+  "kontaktpersonNavn": null,
   "kopiMottakere": null
 }
