--- a/mock_data/dokumenter-v2-opprett/post/melding_forventet_saksbehandlingstid_soknad-post.json5
+++ b/mock_data/dokumenter-v2-opprett/post/melding_forventet_saksbehandlingstid_soknad-post.json5
@@ -4,6 +4,6 @@
   "orgNr": null,
   "innledningFritekst": null,
   "manglerFritekst": null,
-  "kontaktperson": null,
+  "kontaktpersonNavn": null,
   "kopiMottakere": null
 }
