--- a/mock_data/dokumenter-v2-opprett/post/mangelbrev_arbeidsgiver-post.json5
+++ b/mock_data/dokumenter-v2-opprett/post/mangelbrev_arbeidsgiver-post.json5
@@ -4,7 +4,7 @@
   "orgNr": "999999999",
   "innledningFritekst": "Fritekst til bruk i innledningen til brevet.",
   "manglerFritekst": "Fritekst som forklarer grunnen til at mangelbrevet blir sendt.",
-  "kontaktperson": "Ola Nordmann",
+  "kontaktpersonNavn": "Ola Nordmann",
   "kopiMottakere": [
     {
       "rolle": "BRUKER",
