La til behandlingsfrist for behandling.opsummering

--- a/mock_data/behandlinger-behandling/behandling-bid-10.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-10.json5
@@ -374,6 +374,7 @@
     "endretAvNavn": "HATT GLITRENDE",
     "registrertDato": "2019-04-23T09:58:23.899Z",
     "svarFrist": "2020-08-27T07:16:00.000Z",
+    "behandlingsfrist": "2018-09-27",
     "sisteOpplysningerHentetDato": "2019-04-23T09:58:39.751Z"
   }
 }
