--- a/mock_data/behandlinger-behandling/behandling-bid-9.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-9.json5
@@ -855,6 +855,7 @@
     },
     "registrertDato": "2018-03-06T12:05:59.031Z",
     "svarFrist": "2020-08-27T07:16:00.000Z",
+    "behandlingsfrist": "2018-09-27",
     "sisteOpplysningerHentetDato": "2018-08-10T15:00:00.622Z",
     "endretDato": "2018-03-15T16:31:35.845Z",
     "endretAvNavn": "HATT GLITRENDE"
