Legg til felter for Øvrig om arbeidstaker

--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-12.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-12.json5
@@ -88,6 +88,15 @@
       "andelRekruttertINorge": 80.0,
       "ekstraArbeidsgivere": []
     },
+    "oevrigOmArbeidstaker": {
+      "harLoennetArbeidMinstEnMndFoerUtsending": true,
+      "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
+      "harAndreArbeidsgivereIUtsendingsperioden": false,
+      "beskrivelseAnnetArbeid": null,
+      "erSkattepliktig": true,
+      "mottarYtelserNorge": false,
+      "mottarYtelserUtlandet": false,
+    },
     "loennOgGodtgjoerelse": {
       "norskArbgUtbetalerLoenn": false,
       "erArbeidstakerAnsattHelePerioden": true,
