--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-5.json5
@@ -59,6 +59,15 @@
       "andelRekruttertINorge": null,
       "ekstraArbeidsgivere": []
     },
+    "oevrigOmArbeidstaker": {
+      "harLoennetArbeidMinstEnMndFoerUtsending": true,
+      "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
+      "harAndreArbeidsgivereIUtsendingsperioden": false,
+      "beskrivelseAnnetArbeid": null,
+      "erSkattepliktig": true,
+      "mottarYtelserNorge": false,
+      "mottarYtelserUtlandet": false,
+    },
     "loennOgGodtgjoerelse": {
       "norskArbgUtbetalerLoenn": null,
       "erArbeidstakerAnsattHelePerioden": null,
