--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -38,6 +38,15 @@
       "andelRekruttertINorge": 80.0,
       "ekstraArbeidsgivere": []
     },
+    "oevrigOmArbeidstaker": {
+      "harLoennetArbeidMinstEnMndFoerUtsending": true,
+      "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
+      "harAndreArbeidsgivereIUtsendingsperioden": false,
+      "beskrivelseAnnetArbeid": null,
+      "erSkattepliktig": true,
+      "mottarYtelserNorge": false,
+      "mottarYtelserUtlandet": false,
+    },
     "loennOgGodtgjoerelse": {
       "norskArbgUtbetalerLoenn": null,
       "erArbeidstakerAnsattHelePerioden": null,
