--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-17.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-17.json5
@@ -88,7 +88,7 @@
       "andelRekruttertINorge": 80.0,
       "ekstraArbeidsgivere": []
     },
-    "oevrigOmArbeidstaker": {
+    "arbeidssituasjonOgOevrig": {
       "harLoennetArbeidMinstEnMndFoerUtsending": true,
       "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
       "harAndreArbeidsgivereIUtsendingsperioden": false,
