--- a/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
+++ b/mock_data/behandlingsgrunnlag/behandlingsgrunnlag-bid-3.json5
@@ -61,7 +61,7 @@
       "andelRekruttertINorge": null,
       "ekstraArbeidsgivere": []
     },
-    "oevrigOmArbeidstaker": {
+    "arbeidssituasjonOgOevrig": {
       "harLoennetArbeidMinstEnMndFoerUtsending": true,
       "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
       "harAndreArbeidsgivereIUtsendingsperioden": false,
