--- a/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
+++ b/mock_data/behandlingsgrunnlag/post/behandlingsgrunnlag-post.json5
@@ -38,7 +38,7 @@
       "andelRekruttertINorge": 80.0,
       "ekstraArbeidsgivere": []
     },
-    "oevrigOmArbeidstaker": {
+    "arbeidssituasjonOgOevrig": {
       "harLoennetArbeidMinstEnMndFoerUtsending": true,
       "beskrivelseArbeidSisteMnd": "Kjøring av oppvaskmaskin, rengjøring av gulv",
       "harAndreArbeidsgivereIUtsendingsperioden": false,
