--- a/mock_data/behandlinger-status/muligebehandlingsstatuser-bid-13.json5
+++ b/mock_data/behandlinger-status/muligebehandlingsstatuser-bid-13.json5
@@ -12,6 +12,10 @@
     "term": "Behandlingen pågår"
   },
   {
+    kode: "AVVENT_FAGLIG_AVKLARING",
+    term: "Avventer en faglig avklaring"
+  },
+  {
     "kode": "AVSLUTTET",
     "term": "Behandlingen er avsluttet"
   }
