--- a/mock_data/anmodningsperioder-svar/post/anmodningsperiodersvar-post.json5
+++ b/mock_data/anmodningsperioder-svar/post/anmodningsperiodersvar-post.json5
@@ -4,5 +4,6 @@
     "fom": "2017-02-01",
     "tom": "2020-01-01"
   },
-  "begrunnelseFritekst": "Fritekst"
+  "begrunnelseFritekst": "Fritekst",
+  "ytterligereInformasjon": "Ytterligere fritekst"
 }
