Utvidet saksflyt/anmodningsperioder/svar med fritekst

--- a/mock_data/anmodningsperioder-svar/anmodningsperioder-svar.json5
+++ b/mock_data/anmodningsperioder-svar/anmodningsperioder-svar.json5
@@ -4,6 +4,5 @@
     "fom": "2017-02-01",
     "tom": "2020-01-01"
   },
-  "begrunnelseFritekst": "Fritekst",
-  "ytterligereInformasjon": "Ytterligere fritekst"
+  "begrunnelseFritekst": "Fritekst"
 }
