tester kjører grønt

--- a/mock_data/behandlinger-behandling/behandling-bid-19.json5
+++ b/mock_data/behandlinger-behandling/behandling-bid-19.json5
@@ -794,7 +794,10 @@
               "landkode": "NO"
             }
           },
-          "periode": null,
+          "periode": {
+            "fom": "2010-03-12",
+            "tom": "2014-03-12"
+          },
         }
       ]
     },
